# advent2022

./: CMakeLists.txt  build.sh
inc/: day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day1.cpp  main  main.cpp
